--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,13 @@
   "author": "graham",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "next": "^12.2.5",
+    "next-redux-wrapper": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "prop-types": "^15.8.1"
