--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
     "next": "^12.2.5",
     "next-redux-wrapper": "^7.0.5",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "redux-logger": "^3.0.6"
   }
 }
