--- a/front/package.json
+++ b/front/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "antd": "^4.23.2",
     "axios": "^0.27.2",
     "next": "^12.2.5",
     "next-redux-wrapper": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
   },
