--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,14 @@
   "devDependencies": {
     "@ant-design/icons": "^4.7.0",
     "@emotion/babel-plugin": "^11.10.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-hooks": "^0.4.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prop-types": "^15.8.1",
     "redux-logger": "^3.0.6"
   }
