--- a/back/package.json
+++ b/back/package.json
@@ -10,13 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.1",
     "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "dotenv": "^16.0.2"
+    "dotenv": "^16.0.2",
+    "nodemon": "^2.0.20"
   }
 }
