--- a/front/package.json
+++ b/front/package.json
@@ -1,40 +1,49 @@
 {
-  "name": "u2bu-landing",
+  "name": "landing-front",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "next -p 3060",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cross-env NODE_ENV=production ANALYZE=true next build",
+    "start": "cross-env NODE_ENV=production next start -p 80"
   },
-  "author": "graham",
+  "author": "grahams",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@reduxjs/toolkit": "^1.8.5",
-    "antd": "^4.23.2",
+    "@ant-design/icons": "^4.7.0",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@next/bundle-analyzer": "^12.2.3",
+    "@reduxjs/toolkit": "^1.8.3",
+    "antd": "^4.18.2",
     "axios": "^0.27.2",
-    "next": "^12.2.5",
+    "cross-env": "^7.0.3",
+    "immer": "^9.0.14",
+    "next": "^12.1.6",
     "next-redux-wrapper": "^7.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.36.0",
+    "pm2": "^5.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "react-responsive": "^9.0.0-beta.10",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
+    "swiper": "^8.2.5"
   },
   "devDependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@emotion/babel-plugin": "^11.10.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.24.0",
+    "eslint": "^8.20.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-hooks": "^0.4.3",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "@emotion/babel-plugin": "^11.9.2",
     "prop-types": "^15.8.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6"
   }
 }
