--- a/back/package.json
+++ b/back/package.json
@@ -14,9 +14,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "fs": "0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "sequelize": "^6.23.1",
     "sequelize-cli": "^6.4.1"
   },
