--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.0",
     "antd": "^5.0.2",
+    "axios": "^1.2.0",
     "next": "^12.3.4",
     "next-redux-wrapper": "^8.0.0",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "redux-logger": "^3.0.6"
   }
 }
