--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
+    "path": "^0.12.7",
     "sequelize": "^6.25.5",
     "sequelize-cli": "^6.5.2"
   },
