--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
     "sequelize": "^6.25.5",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
+    "fs": "0.0.1-security",
     "nodemon": "^2.0.20"
   }
 }
