--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next -p 3060"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.0",
     "next": "^12.3.4",
+    "next-redux-wrapper": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "redux": "^4.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.28.0",
+    "redux-logger": "^3.0.6"
   }
 }
