--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.26.0",
+    "sequelize-cli": "^6.5.2"
   },
   "devDependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
     "nodemon": "^2.0.20"
   }
