--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
