simul/front: pages/index 제작중

--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "antd": "^5.0.3",
     "axios": "^1.2.0",
     "next": "^12.3.4",
     "next-redux-wrapper": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "redux": "^4.2.0"
   },
   "devDependencies": {
