--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.26.0",
     "sequelize-cli": "^6.5.2"
@@ -20,7 +21,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7"
   }
 }
