--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -17,10 +17,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^8.28.0",
+    "prop-types": "^15.8.1",
     "redux-logger": "^3.0.6"
   }
 }
