--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -13,6 +13,8 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.26.0",
     "sequelize-cli": "^6.5.2"
   },
