--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "morgan": "^1.10.0"
   }
 }
