--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -15,6 +15,7 @@
     "next-redux-wrapper": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
