--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -19,5 +19,8 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prop-types": "^15.8.1",
+    "redux-logger": "^3.0.6"
+  }
 }
