--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "antd": "^5.1.1",
     "axios": "^1.2.1",
     "next": "^13.1.0",
     "next-redux-wrapper": "^8.0.0",
@@ -20,6 +21,7 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.8.0",
     "prop-types": "^15.8.1",
     "redux-logger": "^3.0.6"
   }
