--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -4,18 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.0.0",
-    "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.5.2"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.3",
-    "nodemon": "^2.0.20"
-  }
+  "license": "ISC"
 }
