--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -4,24 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next -p 3060"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
-    "antd": "^5.1.4",
-    "axios": "^1.2.2",
-    "next": "^13.1.1",
-    "next-redux-wrapper": "^8.1.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "redux-logger": "^3.0.6"
-  },
-  "devDependencies": {
-    "@ant-design/icons": "^5.0.0",
-    "prop-types": "^15.8.1"
+    "typescript": "^4.9.4"
   }
 }
