--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -1,27 +1,30 @@
 {
-	"name": "front",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"dev": "next -p 3060"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@types/next": "^9.0.0",
-		"@types/next-redux-wrapper": "^3.0.0",
-		"@types/react": "^18.0.27",
-		"@types/react-dom": "^18.0.10",
-		"@types/react-redux": "^7.1.25",
-		"@types/redux": "^3.6.0",
-		"next": "^13.1.6",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"typescript": "^4.9.4"
-	},
-	"devDependencies": {
-		"@types/node": "18.11.18"
-	}
+  "name": "front",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "next -p 3060"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.2.6",
+    "next": "^13.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.18",
+    "@types/axios": "^0.14.0",
+    "@types/next": "^9.0.0",
+    "@types/next-redux-wrapper": "^3.0.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux": "^3.6.0"
+  }
 }
