--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -15,16 +15,19 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/node": "18.11.18",
     "@types/axios": "^0.14.0",
     "@types/next": "^9.0.0",
     "@types/next-redux-wrapper": "^3.0.0",
+    "@types/node": "18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
-    "@types/redux": "^3.6.0"
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.9"
   }
 }
