--- a/simul/front/package.json
+++ b/simul/front/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next -p 3060"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux-logger": "^3.0.6",
-    "typescript": "^4.9.4"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
