--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -29,8 +29,11 @@
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
+    "mysql2": "^3.3.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "sequelize": "^6.31.1",
+    "sequelize-cli": "^6.6.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
