--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -1,43 +1,21 @@
 {
-  "name": "nodebird-server",
+  "name": "back",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "start": "npx tsc index.ts"
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.7",
-    "@types/helmet": "^4.0.0",
-    "@types/hpp": "^0.2.2",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^20.2.1",
-    "@types/passport": "^1.0.12",
-    "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "helmet": "^7.0.0",
-    "hpp": "^0.2.3",
-    "morgan": "^1.10.0",
     "mysql2": "^3.3.2",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
     "sequelize": "^6.31.1",
-    "sequelize-cli": "^6.6.0",
-    "typescript": "^5.0.4"
+    "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "nodemon": "^2.0.22"
   }
 }
