--- a/simul/back/package.json
+++ b/simul/back/package.json
@@ -9,13 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.3.2",
     "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "dotenv": "^16.0.3"
   }
 }
